# deci-camp

./: README.md  pyproject.toml  requirements.txt
app/: __init__.py  db.py  forms.py
app/static/: script.js  style.css
app/templates/: auth.html  base.html  index.html  timer.html
