[project]
name = "deci-camp"
version = "0.1.0"
description = "Project for DECI summer camp lvl 3 2025"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "wtforms[email-validator]>=3.2.1",
]
